@@ -2,6 +2,10 @@ gem2deb (0.14) UNRELEASED; urgency=medium
 
   * dh-make-ruby: fix conversion of gem names with uppercase characters into
     debian package names
+  * dh_ruby: don't pass LIBDIR into command line when running different
+    interpreters while installed system-wide. This avoids extra
+    -I/usr/lib/ruby/vendor_ruby in command lines and eases debugging running
+    processes for packages that e.g. hang while running their tests.
 
  -- Antonio Terceiro <terceiro@debian.org>  Fri, 10 Apr 2015 10:49:34 +0200
 
